labaratory, cooperation pages added, some styles changed

--- a/about-us.html
+++ b/about-us.html
@@ -36,14 +36,14 @@
     <div class="header-links__wrapper">
       <div class="header-links container">
         <ul class="navigation-links">
-          <li><a href="#">О нас</a></li>
+          <li><a class="active" href="#">О нас</a></li>
           <li><a href="#">Услуги</a></li>
           <li><a href="#">Врачи</a></li>
           <li><a href="#">Диагностика</a></li>
           <li><a href="#">Лабаратория</a></li>
           <li><a href="#">Акции</a></li>
           <li><a href="./feedback.html">Отзывы</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="./contact.html">Контакты</a></li>
         </ul>
         <div class="navigation-input">
           <img src="./images/icon-search.png" alt="search icon" />
@@ -301,7 +301,7 @@
       <div class="container">
         <div class="footer">
           <div class="footer-address">
-            <a href="#">
+            <a href="./home.html">
               <img src="./images/logo-viva(white).png" alt="footer logo"
             /></a>
             <p>Аддресс: Сергелийский район, ул. А.Умаров, 21</p>
@@ -356,8 +356,18 @@
 
         <div class="footer-rteco__logo">
           <p>© rteco 2022. All rights reserved.</p>
-          <p>Разработано в</p>
-          <img src="./images/logo-rteco.png" alt="rteco logo" />
+          <div class="rteco-logo">
+            <a href="https://rteco.org/uz"
+              ><img
+                class="white-logo"
+                src="./images/rteco-logo-white.png"
+                alt="white rteco logo" />
+              <img
+                class="color-logo"
+                src="./images/rteco-logo-color.png"
+                alt="color rteco logo"
+            /></a>
+          </div>
         </div>
       </div>
 
