sales and services pages added, styles changed

--- a/about-us.html
+++ b/about-us.html
@@ -25,10 +25,10 @@
           <p>+998 (95) 199-98-96</p>
         </div>
         <div class="header-buttons">
-          <a href="">Информация о клинике</a>
-          <a href="">Связаться с нами</a>
-          <a href="">Сотрудничество</a>
-          <a href="">Работать в Viva Med</a>
+          <a href="./about-us.html">Информация о клинике</a>
+          <a href="./contact.html">Связаться с нами</a>
+          <a href="./cooperation.html">Сотрудничество</a>
+          <a href="./cooperation.html">Работать в Viva Med</a>
         </div>
       </div>
     </div>
@@ -36,12 +36,12 @@
     <div class="header-links__wrapper">
       <div class="header-links container">
         <ul class="navigation-links">
-          <li><a class="active" href="#">О нас</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">Врачи</a></li>
-          <li><a href="#">Диагностика</a></li>
-          <li><a href="#">Лабаратория</a></li>
-          <li><a href="#">Акции</a></li>
+          <li><a class="active" href="./about-us.html">О нас</a></li>
+          <li><a href="./home.html#services">Услуги</a></li>
+          <li><a href="./home.html#specialists">Врачи</a></li>
+          <li><a href="./diagnostics.html">Диагностика</a></li>
+          <li><a href="./labaratory.html">Лабаратория</a></li>
+          <li><a href="./sales.html">Акции</a></li>
           <li><a href="./feedback.html">Отзывы</a></li>
           <li><a href="./contact.html">Контакты</a></li>
         </ul>
@@ -228,8 +228,37 @@
         </div>
       </div>
 
-      <div class="place-for__pagination">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+      <div class="place-for-pagination">
+        <svg
+          width="14"
+          height="22"
+          viewBox="0 0 14 22"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            id="Vector 2"
+            d="M12 2L3 11L12 20"
+            stroke="white"
+            stroke-width="3"
+          />
+        </svg>
+
+        <p>12 <span class="line"></span>19</p>
+        <svg
+          width="14"
+          height="22"
+          viewBox="0 0 14 22"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            id="Vector 3"
+            d="M2 2L11 11L2 20"
+            stroke="white"
+            stroke-width="3"
+          />
+        </svg>
       </div>
     </div>
 
@@ -291,8 +320,37 @@
             </p>
           </div>
         </div>
-        <div class="place-for__pagination">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="place-for-pagination">
+          <svg
+            width="14"
+            height="22"
+            viewBox="0 0 14 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              id="Vector 2"
+              d="M12 2L3 11L12 20"
+              stroke="white"
+              stroke-width="3"
+            />
+          </svg>
+
+          <p>12 <span class="line"></span>19</p>
+          <svg
+            width="14"
+            height="22"
+            viewBox="0 0 14 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              id="Vector 3"
+              d="M2 2L11 11L2 20"
+              stroke="white"
+              stroke-width="3"
+            />
+          </svg>
         </div>
       </div>
     </div>
