--- a/labaratory-inner.html
+++ b/labaratory-inner.html
@@ -25,10 +25,10 @@
           <p>+998 (95) 199-98-96</p>
         </div>
         <div class="header-buttons">
-          <a href="">Информация о клинике</a>
-          <a href="">Связаться с нами</a>
-          <a href="">Сотрудничество</a>
-          <a href="">Работать в Viva Med</a>
+          <a href="./about-us.html">Информация о клинике</a>
+          <a href="./contact.html">Связаться с нами</a>
+          <a href="./cooperation.html">Сотрудничество</a>
+          <a href="./cooperation.html">Работать в Viva Med</a>
         </div>
       </div>
     </div>
@@ -37,11 +37,11 @@
       <div class="header-links container">
         <ul class="navigation-links">
           <li><a href="./about-us.html">О нас</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">Врачи</a></li>
+          <li><a href="./home.html#services">Услуги</a></li>
+          <li><a href="./home.html#specialists">Врачи</a></li>
           <li><a href="./diagnostics.html">Диагностика</a></li>
-          <li><a href="#">Лабаратория</a></li>
-          <li><a href="#">Акции</a></li>
+          <li><a href="./labaratory.html">Лабаратория</a></li>
+          <li><a href="./sales.html">Акции</a></li>
           <li><a href="./feedback.html">Отзывы</a></li>
           <li><a href="./contact.html">Контакты</a></li>
         </ul>
