--- a/diagnostics-inner.html
+++ b/diagnostics-inner.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="header-links__wrapper">
+    <div class="header-links__wrapper" id="myHeader">
       <div class="header-links container">
         <ul class="navigation-links">
           <li><a href="./about-us.html">О нас</a></li>
