--- a/about-us.html
+++ b/about-us.html
@@ -30,10 +30,14 @@
           <a href="./cooperation.html">Сотрудничество</a>
           <a href="./cooperation.html">Работать в Viva Med</a>
         </div>
+
+        <div class="header-mobicon">
+          <img src="./images/menu.png" alt="menu icon" />
+        </div>
       </div>
     </div>
 
-    <div class="header-links__wrapper">
+    <div class="header-links__wrapper" id="myHeader">
       <div class="header-links container">
         <ul class="navigation-links">
           <li><a class="active" href="./about-us.html">О нас</a></li>
@@ -435,5 +439,22 @@
         alt="logo background"
       />
     </div>
+
+    <script>
+      window.onscroll = function () {
+        myFunction();
+      };
+
+      var header = document.getElementById("myHeader");
+      var sticky = header.offsetTop;
+
+      function myFunction() {
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+        } else {
+          header.classList.remove("sticky");
+        }
+      }
+    </script>
   </body>
 </html>
