responsive version done, some styles changed

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -30,6 +30,10 @@
           <a href="./cooperation.html">Сотрудничество</a>
           <a href="./cooperation.html">Работать в Viva Med</a>
         </div>
+
+        <div class="header-mobicon">
+          <img src="./images/menu.png" alt="menu icon" />
+        </div>
       </div>
     </div>
 
@@ -206,14 +210,14 @@
           <div class="footer-pages">
             <h2 class="footer-pages__title">Страницы</h2>
             <ul class="footer-pages__links">
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Услуги</a></li>
-              <li><a href="#">Врачи</a></li>
-              <li><a href="#">Диагностика</a></li>
-              <li><a href="#">Лабаратория</a></li>
-              <li><a href="#">Акции</a></li>
-              <li><a href="#">Отзывы</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="./about-us.html">О нас</a></li>
+              <li><a href="./home.html#services">Услуги</a></li>
+              <li><a href="./home.html#specialists">Врачи</a></li>
+              <li><a href="./diagnostics.html">Диагностика</a></li>
+              <li><a href="./labaratory.html">Лабаратория</a></li>
+              <li><a href="./sales.html">Акции</a></li>
+              <li><a href="./feedback.html">Отзывы</a></li>
+              <li><a href="./contact.html">Контакты</a></li>
             </ul>
           </div>
 
@@ -238,10 +242,10 @@
           <div class="footer-social">
             <h2 class="footer-social__title">Социальные сети</h2>
             <ul class="footer-social__links">
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Telegram</a></li>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">YouTube</a></li>
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://telegram.org/">Telegram</a></li>
+              <li><a href="https://facebook.com/">Facebook</a></li>
+              <li><a href="https://youtube.com/">YouTube</a></li>
             </ul>
           </div>
         </div>
