--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="header-mobicon">
-          <img src="./images/menu.png" alt="menu icon">
+          <img src="./images/menu.png" alt="menu icon" />
         </div>
       </div>
     </div>
