--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,10 @@
           <a href="./cooperation.html">Сотрудничество</a>
           <a href="./cooperation.html">Работать в Viva Med</a>
         </div>
+
+        <div class="header-mobicon">
+          <img src="./images/menu.png" alt="menu icon" />
+        </div>
       </div>
     </div>
 
@@ -70,14 +74,13 @@
         <div class="gmap_canvas">
           <iframe
             class="gmap_iframe"
-            width="100%"
             frameborder="0"
             scrolling="no"
             marginheight="0"
             marginwidth="0"
-            src="https://maps.google.com/maps?width=1000&amp;height=450&amp;hl=en&amp;q=vivamed&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+            src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=vivamed sergeli&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
           ></iframe
-          ><a href="https://connectionsgame.org/">Connections Game</a>
+          ><a href="https://connectionsgame.org/">Connections NYT</a>
         </div>
         <style>
           .mapouter {
@@ -93,6 +96,7 @@
             height: 450px;
           }
           .gmap_iframe {
+            width: 100% !important;
             height: 450px !important;
           }
         </style>
@@ -338,6 +342,7 @@
             <p class="inform-text">Сергелийский район</p>
             <p class="inform-text">ул. А.Умаров, 21</p>
           </div>
+
           <div class="inform-time">
             <svg
               width="36"
@@ -359,6 +364,7 @@
             <p class="inform-text">Пн-Пт: 8:00 - 18:00</p>
             <p class="inform-text">Сб-Вс: 10:00 - 16:00</p>
           </div>
+
           <div class="inform-social">
             <svg
               width="36"
@@ -515,14 +521,14 @@
           <div class="footer-pages">
             <h2 class="footer-pages__title">Страницы</h2>
             <ul class="footer-pages__links">
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Услуги</a></li>
-              <li><a href="#">Врачи</a></li>
-              <li><a href="#">Диагностика</a></li>
-              <li><a href="#">Лабаратория</a></li>
-              <li><a href="#">Акции</a></li>
-              <li><a href="#">Отзывы</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="./about-us.html">О нас</a></li>
+              <li><a href="./home.html#services">Услуги</a></li>
+              <li><a href="./home.html#specialists">Врачи</a></li>
+              <li><a href="./diagnostics.html">Диагностика</a></li>
+              <li><a href="./labaratory.html">Лабаратория</a></li>
+              <li><a href="./sales.html">Акции</a></li>
+              <li><a href="./feedback.html">Отзывы</a></li>
+              <li><a href="./contact.html">Контакты</a></li>
             </ul>
           </div>
 
@@ -547,10 +553,10 @@
           <div class="footer-social">
             <h2 class="footer-social__title">Социальные сети</h2>
             <ul class="footer-social__links">
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Telegram</a></li>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">YouTube</a></li>
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://telegram.org/">Telegram</a></li>
+              <li><a href="https://facebook.com/">Facebook</a></li>
+              <li><a href="https://youtube.com/">YouTube</a></li>
             </ul>
           </div>
         </div>
