--- a/feedback.html
+++ b/feedback.html
@@ -465,21 +465,6 @@
       />
     </div>
 
-    <script>
-      window.onscroll = function () {
-        myFunction();
-      };
-
-      var header = document.getElementById("myHeader");
-      var sticky = header.offsetTop;
-
-      function myFunction() {
-        if (window.pageYOffset > sticky) {
-          header.classList.add("sticky");
-        } else {
-          header.classList.remove("sticky");
-        }
-      }
-    </script>
+    <script src="./js/accardion.js"></script>
   </body>
 </html>
