bugs of accordion fixed

--- a/home.html
+++ b/home.html
@@ -506,8 +506,8 @@
         </p>
         <div class="advantages-content">
           <ul class="advantages-content__list">
-            <li class="active">1 .Профессионализм</li>
-            <li>2 .Широкий спектр услуг</li>
+            <li >1 .Профессионализм</li>
+            <li class="active">2 .Широкий спектр услуг</li>
             <li>3 .Современное оборудование</li>
             <li>4 .Высокий уровень обслуживания</li>
             <li>5 .Постоянное развитие в научно-практической сфере</li>
