--- a/labaratory-inner.html
+++ b/labaratory-inner.html
@@ -94,6 +94,42 @@
       <div class="accordion" id="accordion">
         <div class="accordion-header">
           <h1 class="accordion-header__title">Гомоцистеин</h1>
+          <h2 class="accordion-header__price">350.000 сум</h2>
+          <div class="accordion-header__image">
+            <img
+              class="plus-button"
+              src="./images/diagnostics/plus-button.png"
+              alt="plus button"
+            />
+            <img
+              class="minus-button"
+              src="./images/diagnostics/minus-button.png"
+              alt="minus button"
+            />
+          </div>
+        </div>
+        <div class="accordion-content">
+          <p>
+            <strong>Гидрокортизон (кортизол).</strong> Данный анализ показан при
+            аномальной пигментации кожных покровов, мышечной слабости,
+            остеопорозе и т. д.
+          </p>
+
+          <p>
+            <strong>Свободный кортизол (в моче). </strong>Исследование
+            проводится в рамках диагностики синдрома Иценко-Кушинга.
+          </p>
+          <p>
+            <strong>АКТГ.</strong> Гормональные анализы данного типа проводятся
+            при артериальной гипертензии, синдроме хронической усталости, а
+            также надпочечниковой недостаточности.
+          </p>
+        </div>
+      </div>
+
+      <div class="accordion" id="accordion">
+        <div class="accordion-header">
+          <h1 class="accordion-header__title">Кортизол</h1>
           <h2 class="accordion-header__price">250.000 сум</h2>
           <div class="accordion-header__image">
             <img
@@ -164,7 +200,40 @@
 
       <div class="accordion" id="accordion">
         <div class="accordion-header">
-          <h1 class="accordion-header__title">МРТ головного мозга</h1>
+          <h1 class="accordion-header__title">Альдостерон</h1>
+          <h2 class="accordion-header__price">250.000 сум</h2>
+          <div class="accordion-header__image">
+            <img
+              class="plus-button"
+              src="./images/diagnostics/plus-button.png"
+              alt="plus button"
+            />
+            <img
+              class="minus-button"
+              src="./images/diagnostics/minus-button.png"
+              alt="minus button"
+            />
+          </div>
+        </div>
+        <div class="accordion-content">
+          <p>
+            Несмотря на широкий выбор методов консервативной терапии в лечении
+            ЛОР-органов, их применение не всегда приводит к устранению инфекции
+            и требует хирургического вмешательства для достижения полного
+            выздоровления. Кроме того, врожденные и приобретенные искривления
+            носовой перегородки, гипертрофии носовых раковин, врожденная
+            склонность к разрастанию лимфоидной ткани, некоторые последствия
+            травм могут быть устранены только с помощью операции.
+            Хирург-отоларинголог — врач высшей квалификационной категории,
+            который занимается хирургическим лечением патологий ЛОР-органов. В
+            компетенцию специалиста входят такие оперативные вмешательства как:
+          </p>
+        </div>
+      </div>
+
+      <div class="accordion" id="accordion">
+        <div class="accordion-header">
+          <h1 class="accordion-header__title">HLA-B27</h1>
           <h2 class="accordion-header__price">250.000 сум</h2>
           <div class="accordion-header__image">
             <img
