--- a/services-inner.html
+++ b/services-inner.html
@@ -92,6 +92,7 @@
 
     <div class="information-box container">
       <div class="accordion-wrapper">
+
         <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">Биопсия ЛОР-органов</h1>
@@ -124,9 +125,10 @@
             </p>
           </div>
         </div>
+
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">МРТ головного мозга</h1>
+            <h1 class="accordion-header__title">Удаление полипов, кист, аденоидов, миндалин</h1>
             <div class="accordion-header__image">
               <img
                 class="plus-button"
@@ -156,9 +158,10 @@
             </p>
           </div>
         </div>
+
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">МРТ головного мозга</h1>
+            <h1 class="accordion-header__title">Вскрытие абсцессов, гематом, фурункулов</h1>
             <div class="accordion-header__image">
               <img
                 class="plus-button"
@@ -188,6 +191,139 @@
             </p>
           </div>
         </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">Оперативное лечение ринита, гайморита, храпа</h1>
+            <div class="accordion-header__image">
+              <img
+                class="plus-button"
+                src="./images/diagnostics/plus-button.png"
+                alt="plus button"
+              />
+              <img
+                class="minus-button"
+                src="./images/diagnostics/minus-button.png"
+                alt="minus button"
+              />
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+        
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">Хирургическая остановка острого носового кровотечения</h1>
+            <div class="accordion-header__image">
+              <img
+                class="plus-button"
+                src="./images/diagnostics/plus-button.png"
+                alt="plus button"
+              />
+              <img
+                class="minus-button"
+                src="./images/diagnostics/minus-button.png"
+                alt="minus button"
+              />
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">Септопластика (операция на искривленную носовую перегородку)</h1>
+            <div class="accordion-header__image">
+              <img
+                class="plus-button"
+                src="./images/diagnostics/plus-button.png"
+                alt="plus button"
+              />
+              <img
+                class="minus-button"
+                src="./images/diagnostics/minus-button.png"
+                alt="minus button"
+              />
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">Репозиция носа</h1>
+            <div class="accordion-header__image">
+              <img
+                class="plus-button"
+                src="./images/diagnostics/plus-button.png"
+                alt="plus button"
+              />
+              <img
+                class="minus-button"
+                src="./images/diagnostics/minus-button.png"
+                alt="minus button"
+              />
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
 
